test/domains/sungeun/sparse/expand.good
expand.chpl:3: In function 'my_expand':
expand.chpl:4: error: expand not supported on sparse domains
expand.chpl:10: Function 'my_expand' instantiated as: my_expand(D: DefaultSparseDom(1,int(64),domain(1,int(64),false)), off: int(64))
